Fixing layout issues and remove frontend md

--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -1,5 +1,5 @@
 .home-card {
-    margin: 0.8rem;
+    margin: 0.8rem 0.8rem 1.2rem 0.8rem;
     padding: 1.5rem;
 }
 
